# Passenger-Server

./: .env  .eslintrc.js  .gitignore  Dockerfile  README.md  docker-compose.yaml  gunicorn.conf.py  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  setup.cfg  tsconfig.json
app/: __init__.py  auth.py  config.py  routes.py  utils.py
src/: app.module.ts  main.ts  passenger.controller.ts  passenger.dto.ts  passenger.module.ts
src/decorators/: endpoint.ts
src/docs/: contents.ts  schemas.ts
src/modules/auth/: controller.ts  dto.ts
src/modules/data/: controller.ts  dto.ts
src/modules/other/: controller.ts
src/modules/report/: controller.ts
src/services/: authServices.ts  dataTransferServices.ts  generationServices.ts  otherServices.ts  passphraseServices.ts  reportServices.ts
src/types/: commandline.d.ts
src/utilities/: CLIRunnner.ts  ExitStatus.ts  FileChecker.ts  Logger.ts  Translate.ts
test/: app.e2e-spec.ts
