[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "passenger-server"
version = "0.1.0"
license.file = "LICENSE"
description = "Web Server Interface to interact with Passenger CLI for self-hosting"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Furkan Baytekin", email = "furkanbaytekin@gmail.com" }]
dependencies = [
  "blinker==1.8.2",
  "click==8.1.7",
  "Flask==3.0.3",
  "itsdangerous==2.2.0",
  "Jinja2==3.1.4",
  "MarkupSafe==2.1.5",
  "python-dotenv==1.0.1",
  "Werkzeug==3.0.3",
]

[tool.setuptools.packages.find]
where = ["app"]
