[metadata]
name = passenger-server
version = 0.1.0
description = Web Server Interface to interact with Passenger CLI
long_description = file: README.md
long_description_content_type = text/markdown
author = Furkan Baytekin (Elagoht)
author_email = furkanbaytekin@gmail.com
license = GPL-3.0

[options]
packages = find:
install_requires =
    blinker==1.8.2
    click==8.1.7
    Flask==3.0.3
    itsdangerous==2.2.0
    Jinja2==3.1.4
    MarkupSafe==2.1.5
    python-dotenv==1.0.1
    Werkzeug==3.0.3

[options.packages.find]
where = app
